# ProteiPractice

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cppcheck.supp  multithread.sh  test.txt
benchmark/: benchmark.cpp
include/: config.h.in  config.hpp  config.hpp.in  custom_types.hpp  data_pool.hpp  display.hpp  exchange_ue.hpp  hooks.hpp  ip_addr.hpp  logger.hpp  menu.hpp  menu_functions.hpp  parsing.hpp  resources_test.hpp  server.hpp  settings.hpp  static_containers.hpp  thread_pool.hpp  timer.hpp  ue_context.hpp  utility.hpp
src/: config.cpp  config.h  custom_types.cpp  data_pool.hpp  display.cpp  display.hpp  exchange_ue.cpp  hashed_values.hpp  hooks.hpp  io_manager.hpp  logger.cpp  logger.h  logger.hpp  main.cpp  main.hpp  menu.cpp  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_functions_container.hpp  parsing.cpp  parsing.hpp  resources_test.hpp  server.cpp  server_impl.cpp  settings.cpp  settings.hpp  static_containers.cpp  static_containers.hpp  utility.hpp
tests/: test.cpp
tests_multithread/: test_result.txt
